# databrary-be

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
databrary/: asgi.py  settings.py  urls.py  wsgi.py
databrary/settings/: alone.py  base.py  local.py  prod.py
tests/: tests_dummy.py
