[tool.poetry]
name = "databrary-be"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.15.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pytest = "^8.1.1"
coverage = "^7.4.4"
django-stubs = "^4.2.7"


[tool.poetry.group.pytest.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
known_first_party = ["config"]

[mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "databrary.settings"

[tool.coverage.run]
branch = true
omit = [
    ".venv/*",
    "tests/*",
]
